Bigger touch surface for navbar

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -22,14 +22,25 @@
     </button>
     <ul
       id="navbar-dropdown"
-      class="border-b border-current sm:border-none hidden group-[[data-open]]:flex sm:flex flex-col sm:flex-row flex-wrap py-4 justify-center items-center gap-5"
+      class="border-b border-current sm:border-none hidden group-[[data-open]]:flex sm:flex flex-col sm:flex-row flex-wrap justify-center items-stretch sm:gap-5"
     >
-      <li><a href="#o-mnie">o mnie</a></li>
-      <li><a href="#social-media">social media</a></li>
-      <li><a href="#copywriting">copywriting</a></li>
-      <li><a href="#ugc">ugc</a></li>
-      <li><a href="#portfolio">portfolio</a></li>
-      <li><a href="#kontakt">kontakt</a></li>
+      <li>
+        <a class="block py-2.5 text-center" href="#o-mnie">o mnie</a>
+      </li>
+      <li>
+        <a class="block py-2.5 text-center" href="#social-media">social media</a
+        >
+      </li>
+      <li>
+        <a class="block py-2.5 text-center" href="#copywriting">copywriting</a>
+      </li>
+      <li><a class="block py-2.5 text-center" href="#ugc">ugc</a></li>
+      <li>
+        <a class="block py-2.5 text-center" href="#portfolio">portfolio</a>
+      </li>
+      <li>
+        <a class="block py-2.5 text-center" href="#kontakt">kontakt</a>
+      </li>
     </ul>
   </nav>
 </div>
