--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -13,7 +13,7 @@
   >
     <button
       type="button"
-      class="flex sm:hidden w-full h-8 flex-col justify-center items-center gap-1.5 active:gap-0.5 focus:gap-0.5 transition-all ease-out duration-200 cursor-pointer bg-[#FFFDE6]/50"
+      class="flex sm:hidden w-full h-8 flex-col justify-center items-center gap-1.5 group-[[data-open]]:gap-0.5 transition-all ease-out duration-200 cursor-pointer bg-[#FFFDE6]/50"
       aria-controls="navbar-dropdown"
     >
       <div class="w-6 h-0.25 bg-[currentColor]"></div>
