--- a/src/components/PrzesuwaneKafelki.astro
+++ b/src/components/PrzesuwaneKafelki.astro
@@ -10,11 +10,11 @@ import Flower from './Flower.astro';
 
 <section class="relative mx-auto py-20 w-fit">
   <h1 class="sr-only">Przesuwane kafelki</h1>
-  <Image
+  <!-- <Image
     src={QuotePrzesuwaneKafelki}
     alt="Przesuwane kafelki"
     class="mx-auto w-64 lg:ml-24 lg:mr-0 lg:w-80"
-  />
+  /> -->
   <div
     class="flex flex-wrap gap-y-4 justify-center mt-10 max-w-[20rem] lg:max-w-none"
   >
