Flowers can be flicked again

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,7 +4,7 @@
 
 <div id="main-navigation" class="group">
   <div
-    class="group-not-[[data-open]]:opacity-0 group-not-[[data-open]]:hidden:pointer-events-none sm:hidden fixed z-50 inset-0 backdrop-blur-sm transition-all"
+    class="group-not-[[data-open]]:opacity-0 group-not-[[data-open]]:pointer-events-none sm:hidden fixed z-50 inset-0 backdrop-blur-sm transition-all"
   >
   </div>
   <nav
