--- a/src/components/PortfolioSection.astro
+++ b/src/components/PortfolioSection.astro
@@ -7,7 +7,10 @@ import IdPhotoLight from '../assets/id-photo-light.png';
 import Flower from './Flower.astro';
 ---
 
-<section id="portfolio" class="relative mx-auto mt-64 scroll-mt-32 pb-64 w-fit">
+<section
+  id="portfolio"
+  class="relative mx-auto mt-64 scroll-mt-32 pb-4 lg:pb-64 w-fit"
+>
   <h1 class="sr-only">Portfolio</h1>
   <Image src={TitlePortfolio} alt="Portfolio" class="mx-auto w-64 lg:w-80" />
   <div
