--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -170,7 +170,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
     </div>
     <div class="lg:col-start-2 lg:row-start-1 lg:row-span-2 p-6 flex flex-col">
       <p
-        class="w-[19rem] font-poppins font-light self-center lg:mr-16 lg:self-start text-justify lg:text-left"
+        class="w-[19rem] font-poppins font-light self-center lg:mr-16 lg:self-start text-center lg:text-left"
       >
         Mam 24 lata.
         <br />
@@ -227,7 +227,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
       </div>
     </div>
     <p
-      class="mx-auto p-6 pt-8 max-w-[23rem] font-poppins font-light lg:col-start-1 lg:row-start-2 text-justify lg:text-left"
+      class="mx-auto p-6 pt-8 max-w-[23rem] font-poppins font-light lg:col-start-1 lg:row-start-2 text-center lg:text-left"
     >
       W 2024 roku postanowiłam spełnić swoje marzenie o prowadzeniu mediów
       społecznościowych.
@@ -255,7 +255,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
       <Flower class="w-64 sm:w-96 -scale-x-100" />
     </div>
     <p
-      class="lg:col-start-2 lg:row-start-2 mx-auto flex flex-col items-center lg:items-end justify-end p-6 pt-8 max-w-[23rem] font-poppins font-light text-justify lg:text-left"
+      class="lg:col-start-2 lg:row-start-2 mx-auto flex flex-col items-center lg:items-end justify-end p-6 pt-8 max-w-[23rem] font-poppins font-light text-center lg:text-left"
     >
       W 2023 roku skończyłam studia językoznawcze, a obecnie realizuję kierunek
       twórcze pisanie.
@@ -291,7 +291,7 @@ import YourKayaGrid from './YourKayaGrid.astro';
       />
     </div>
     <p
-      class="lg:col-start-2 lg:row-start-2 mx-auto flex flex-col items-end justify-end px-6 pt-8 max-w-[20rem] font-poppins font-light text-justify lg:text-left"
+      class="lg:col-start-2 lg:row-start-2 mx-auto flex flex-col items-end justify-end px-6 pt-8 max-w-[20rem] font-poppins font-light text-center lg:text-left"
     >
       Po roku praktyki i wielu kursach tematycznych, jestem gotowa, by przenieść
       swoje działania na wyższy, profesjonalny poziom.
