--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-// import Home from '../components/Home.astro';
-import UnderConstruction from '../components/UnderConstruction.astro';
+import Home from '../components/Home.astro';
+// import UnderConstruction from '../components/UnderConstruction.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-  <!-- <Home /> -->
-  <UnderConstruction />
+  <Home />
+  <!-- <UnderConstruction /> -->
 </Layout>
